<?xml version="1.0" encoding="utf-8"?><!--
  ~ /* Copyright (C) Alejandro Pacheco - All Rights Reserved
  ~  * Unauthorized copying of this file, via any medium is strictly prohibited
  ~  * Proprietary and confidential
  ~  * Written by  Alejandro Pacheco Bobillo <alepacheco99@gmail.com>
  ~  */
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_questions"
            android:checked="true"
            android:icon="@drawable/ic_done_all_black_24dp"
            android:title="@string/questions" />

        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/information" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_lightbulb_outline_black_24dp"
            android:title="@string/news" />
        <!-- <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_question_answer_black_24dp"
            android:title="@string/chat" /> -->
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
        </menu>
    </item>

</menu>
